# pytorf

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
docs/: CNAME  conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/_sources/: modules.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/source/: conf.py
docs/src/: about.html  index.html
pytorf/: __init__.py  helpers.py  io.py  obs_format.py  obs_id2pos.py  obs_read_csvy.py  obs_read_nc.py  obs_roundtime.py  obs_summary.py  obs_trunc.py  obs_write_csvy.py  plotting.py  processing.py  readers.py
pytorf-website/: README.md
pytorf-website/src/assets/css/: style.css
pytorf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pytorf/.ipynb_checkpoints/: helpers-checkpoint.py  hysplit-checkpoint.py  obs_footname-checkpoint.py  obs_freq-checkpoint.py  obs_julian_py-checkpoint.py  obs_out-checkpoint.py  obs_rbind-checkpoint.py  readers-checkpoint.py  sr-checkpoint.py
pytorf/pytorf/website/: README.md
pytorf/pytorf/website/src/: about.html  index.html
pytorf/pytorf/website/src/assets/css/: style.css
tests/: test_obs_read_nc.py
